--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -7,6 +7,7 @@
 }
 
 .reactOsmGeocoding>input {
+    position: relative;
     width: inherit;
     padding: 10px;
     border-radius: 5px;
@@ -25,6 +26,7 @@
 
 
 .reactOsmGeocoding .results {
+    position: absolute;
     border: 1px solid;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
@@ -40,7 +42,7 @@
     cursor: pointer;
 }
 .reactOsmGeocoding .results .result:hover {
-    background-color: beige;
+    background-color: #cccccc;
 }
 
 .reactOsmGeocoding .loader {
