--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -13,11 +13,12 @@
     border-radius: 5px;
     border-width: 1px;
     border-color: transparent;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     padding-left: 45px;
     padding-right: 30px;
     box-sizing: border-box;
 }
+
 .reactOsmGeocoding>img {
     position: absolute;
     top: 3px;
@@ -31,7 +32,7 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     padding: 5px 10px;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     border-color: aliceblue;
     max-height: 500px;
     overflow: scroll;
@@ -41,24 +42,16 @@
     padding: 5px;
     cursor: pointer;
 }
+
 .reactOsmGeocoding .results .result:hover {
     background-color: #cccccc;
 }
 
 .reactOsmGeocoding .loader {
-    border: 10px solid #f3f3f3; /* Light grey */
-    border-top: 10px solid #3498db; /* Blue */
-    border-radius: 50%;
-    animation: spin 2s linear infinite;
-
     position: absolute;
-    top: 5px;
-    right: 5px;
-    width: 10px;
-    height: 10px;
-}
-  
-@keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    left: 0;
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
